fix: black to white text transition in dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,7 @@
 *,
 ::before,
 ::after {
-  @apply box-border p-0 m-0 transition-all;
+  @apply box-border p-0 m-0 text-black dark:text-white transition-all;
 }
 body {
   @apply dark:bg-gradient-to-br from-primary to-secondary;
